php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #50982 incorrect assumption of PAGE_SIZE size
Submitted: 2010-02-09 23:26 UTC Modified: 2011-09-15 11:30 UTC
From: geissert at debian dot org Assigned: dmitry (profile)
Status: Closed Package: Compile Failure
PHP Version: 5.3.1 OS:
Private report: No CVE-ID: None
 [2010-02-09 23:26 UTC] geissert at debian dot org
Description:
------------
If sys/mman.h does not define PAGE_SIZE there's an incorrect assumption that it is 4096. This can have multiple side effects.

At Debian we are going to use the following patch:
http://git.debian.org/?p=pkg-php/php.git;a=blob;f=debian/patches/page_size_fixes.patch;h=f24b732ff6349101e1cee560b581081ca74d717f;hb=HEAD

There's also a logical bug where PAGE_SIZE could not be defined at all but still used, but I'm not addressing that one.



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2010-02-12 17:22 UTC] jani@php.net
Related to bug #48034 

Dmitry, please check this out.

 [2011-09-15 11:30 UTC] dmitry@php.net
Automatic comment from SVN on behalf of dmitry
Revision: http://svn.php.net/viewvc/?view=revision&revision=316812
Log: Fixed bug #50982 (incorrect assumption of PAGE_SIZE size)
 [2011-09-15 11:30 UTC] dmitry@php.net
-Status: Assigned +Status: Closed
 [2011-09-15 11:30 UTC] dmitry@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.

 For Windows:

http://windows.php.net/snapshots/
 
Thank you for the report, and for helping us make PHP better.


 [2012-04-18 09:48 UTC] laruence@php.net
Automatic comment on behalf of dmitry
Revision: http://git.php.net/?p=php-src.git;a=commit;h=653e374b6b1c4ce89ef4bb74cd1387f8b859f35c
Log: Fixed bug #50982 (incorrect assumption of PAGE_SIZE size)
 [2012-07-24 23:39 UTC] rasmus@php.net
Automatic comment on behalf of dmitry
Revision: http://git.php.net/?p=php-src.git;a=commit;h=653e374b6b1c4ce89ef4bb74cd1387f8b859f35c
Log: Fixed bug #50982 (incorrect assumption of PAGE_SIZE size)
 [2013-11-17 09:36 UTC] laruence@php.net
Automatic comment on behalf of dmitry
Revision: http://git.php.net/?p=php-src.git;a=commit;h=653e374b6b1c4ce89ef4bb74cd1387f8b859f35c
Log: Fixed bug #50982 (incorrect assumption of PAGE_SIZE size)
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Sep 16 11:00:01 2026 UTC