Fixed bug #50982 (incorrect assumption of PAGE_SIZE size)